# trade-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
api-prompt/: Cargo.toml  README.md  params.gdax.example.json
api-prompt/src/: input.rs  main.rs
api-prompt/src/prompt/: draw.rs  mod.rs  workers.rs
benches/: order_book.rs  tick.rs
binance_prompt/: Cargo.toml  README.md  keys.example.json  params.example.json
binance_prompt/src/: input.rs  main.rs  prompt.rs
binance_prompt/src/prompt/: draw.rs  mod.rs  workers.rs
examples/: live_order_book.rs
examples/prompt/: Cargo.toml  README.md  keys.binance.example.json  keys.binance.json  keys.gdax.example.json  keys.gdax.json  keys.hitbtc.example.json  params.binance.example.json  params.binance.json  params.gdax.example.json  params.gdax.json  params.hitbtc.example.json
examples/prompt/src/: input.rs  main.rs
examples/prompt/src/prompt/: draw.rs  mod.rs  workers.rs
src/: lib.rs  notify.rs  order_book.rs
src/api/: errors.rs  mod.rs  order_book.rs  params.rs  query_string.rs  symbol.rs  timestamp.rs  wss.rs
src/api/binance/: client.rs  errors.rs  mod.rs  rest.rs  wss.rs
src/api/gdax/: errors.rs  mod.rs  rest.rs  wss.rs
src/api/hitbtc/: errors.rs  mod.rs  rest.rs  wss.rs
src/matching_engine/: arena.rs  mod.rs  test.rs
src/notify/: mod.rs
src/order_book/: display.rs  mod.rs  test.rs
src/tick/: mod.rs  test.rs
