[package]
name = "trade"
version = "0.1.0"
authors = ["scalexm <martin.alex32@hotmail.fr>"]

[dependencies]
serde_json = "^1"
serde = "^1"
serde_derive = "^1"
futures = "0.1.17"
failure = "^0.1"
failure_derive = "^0.1"
hyper = "^0.12"
hyper-tls = "^0.2"
log = "^0.4"
env_logger = "^0.5"
num-rational = "^0.2"
openssl = "^0.10"
hex = "^0.3"
tokio = "^0.1"
chrono = "^0.4"
base64 = "^0.9"
chashmap = "2.2.0"

[dependencies.uuid]
version = "^0.6"
features = ["v4"]

[dependencies.ws]
version = "^0.7"
features = ["ssl"]

[dev-dependencies]
criterion = "0.2"

 [[bench]]
name = "tick"
harness = false
