[package]
name = "trade"
version = "0.1.0"
authors = ["scalexm <alexandre@scalexm.fr>"]
edition = "2018"
exclude = [
    "benches/*",
    "examples/*",
]
description = "Utilities for trading on crypto-currencies exchanges."
repository = "https://github.com/scalexm/trade-rs"
readme = "README.md"
license = "MIT"
keywords = ["binance", "gdax", "coinbase", "hitbtc"]

[dependencies]
serde_json = "^1"
serde = "^1"
serde_derive = "^1"
futures = "^0.1"
failure = "^0.1"
failure_derive = "^0.1"
hyper-tls = "^0.3"
hyper = "^0.12"
log = "^0.4"
env_logger = "^0.5"
openssl = "^0.10"
hex = "^0.3"
tokio = "^0.1"
chrono = "^0.4"
base64 = "^0.9"
chashmap = "2.2.0"
bitflags = "^1"

[dependencies.uuid]
version = "^0.6"
features = ["v4"]

[dependencies.ws]
version = "^0.7"
features = ["ssl"]

[dependencies.arrayvec]
version = "^0.4"
features = ["serde-1"]

[dev-dependencies]
criterion = "0.2"

 [[bench]]
name = "tick"
harness = false

[[example]]
name = "live_order_book"
