[package]
name = "prompt"
version = "0.1.0"
authors = ["scalexm <martin.alex32@hotmail.fr>"]
edition = "2018"

[dependencies]
futures = "0.1.17"
tokio = "^0.1"
tokio-current-thread = "^0.1"
cursive = { git = "https://github.com/gyscos/Cursive" }
trade = { path = "../../" }
serde_json = "^1"
failure = "^0.1"
env_logger = "^0.5"
clap = "^2"
